Day12-K8s-Ingress/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: day12-app
  namespace: ingress-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: day12-app
  template:
    metadata:
      labels:
        app: day12-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.29-alpine
        ports:
        - containerPort: 80
