Day12-K8s-Ingress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ingress-demo
spec:
  selector:
    app: day12-app
  ports:
  - port: 80
    targetPort: 80
